Support Groovy 3 (#11520)
* Support Groovy 3